# android

./: build.gradle  config.gradle  feipai.jks  feipaikey.keystore  key.properties  settings.gradle
app/: CMakeLists.txt  and_res_guard.gradle  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/feipai/flypai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CVWrapper.cpp  CVWrapper.h  LogUtils.h  opencv.cpp
app/src/main/cpp/include/opencv2/: cvconfig.h  opencv_modules.hpp  stitching.hpp
app/src/main/cpp/include/opencv2/stitching/detail/: blenders.hpp  exposure_compensate.hpp  matchers.hpp
app/src/main/java/com/feipai/flypai/api/: ApiException.java  (+14 more)
app/src/main/java/opencv/: OpencvLib.java
app/src/main/res/anim/: alpha_out_anim.xml  dialog_from_bottom_anim_in.xml  dialog_from_bottom_anim_out.xml  enter_bottom_left_anim.xml  enter_bottom_right_anim.xml  enter_top_anim.xml  enter_top_left_anim.xml  enter_top_right_anim.xml  exit_bottom_left_anim.xml  exit_bottom_right_anim.xml  exit_left_anim.xml  exit_right_anim.xml  exit_top_left_anim.xml  exit_top_right_anim.xml  view_up_scale_anim.xml
app/src/main/res/color/: login_button_tv_selcetor.xml  media_muice_tv_selcetor.xml
app/src/main/res/drawable/: adjust_control_hint_button_selcetor.xml  adjust_control_show_button_selcetor.xml  advertising_space_btn_bg.xml  back_round_all.xml  back_selcetor.xml  base_dialog_bg.xml  border333333_bg.xml  border5098e4_bg_def.xml  border_b8b8b8_bg.xml  border_bg.xml  border_no_round_bg.xml  border_only_top_round_bg.xml  borderffffff50_bg.xml  borderffffff_bg.xml  bottom_dialog_button_bg_def.xml  calibration_progress_bg.xml  camera_back_grand.xml  camera_round_all.xml  camera_set_bot_right.xml  camera_set_bot_right_sel.xml  camera_set_normal.xml  camera_set_right_round.xml  camera_set_right_round_sel.xml  camera_set_sel.xml  camera_set_top_right.xml  camera_set_top_right_sel.xml  circle_friends_selcetor.xml  connect_plane_button_bg_def.xml  connect_plane_button_connected_bg.xml  contr_border_only_buttom.xml  dialog_speed_seekbar_progress_bg.xml  edittext_bg.xml  fe9700_btn_bg_def.xml  fe9700_btn_bg_sele.xml  fe9700_btn_selcetor.xml  fill00cf00_bg.xml  fillf34235_bg.xml  fillfe9700_bg.xml  find_plane_but_bg.xml  find_plane_but_bg_def.xml  (+64 more)
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_splash.xml  base_dialog.xml  base_title_layout.xml  battery_fragment.xml  bottom_dialog_layout.xml  calibration_dialog_layout.xml  calibration_fragment.xml  calibration_success_dialog_layout.xml  camera_adjust_layout.xml  camera_bottominfoview.xml  camera_map_view.xml  camera_operateview.xml  camera_set.xml  camera_set_accessory.xml  camera_set_buttons.xml  camera_set_middle_twobutton.xml  camera_set_scrollview.xml  camera_set_switch.xml  camera_set_threebutton.xml  camera_set_title_value.xml  camera_set_twobutton.xml  camera_smart_view.xml  camera_top_bar_view.xml  camera_videoview.xml  confirm_action_dialog.xml  country_code_item_layout.xml  country_code_title_layout.xml  delay_time_dialog_layout.xml  delay_time_dialog_speed_layout.xml  delay_time_direction_layout.xml  download_dialog_layout.xml  find_plane_fragment.xml  flight_control_eight_down_outside_layout.xml  flight_control_fragment.xml  flight_control_limit_layout.xml  flight_control_return_height_layout.xml  flight_control_return_point_layout.xml  flight_control_safeguard_layout.xml  (+50 more)
app/src/main/res/mipmap-anydpi-v26/: app_icon.xml  app_icon_round.xml
app/src/main/res/values/: arrays.xml  attrs.xml  attrs_topbar_view.xml  colors.xml  ids.xml  smssdk_arrays.xml  smssdk_errors.xml  strings.xml  styles.xml
app/src/main/res/values-en-rUS/: arrays.xml  strings.xml  umeng_socialize_strings.xml
app/src/test/java/com/feipai/flypai/: ExampleUnitTest.java
videoplayer/: CMakeLists.txt  build.gradle
videoplayer/src/main/: AndroidManifest.xml
videoplayer/src/main/cpp/: H264Player.cpp  MuxerToMP4.cpp  MuxerToMP4.hpp  tcp_client.cpp  tcp_client.h
videoplayer/src/main/cpp/Decoder/: Deocder.cpp  Deocder.h  HardDecoder.cpp  HardDecoder.h  SoftDecoder.cpp  SoftDecoder.h  VideoProcessExtractor.cpp  VideoProcessExtractor.h
videoplayer/src/main/cpp/ffmpeg/libavutil/: ffversion.h
videoplayer/src/main/cpp/ffmpeg/libffmpeg/: config.h
videoplayer/src/main/cpp/ffmpegExtractor/: CPPLog.h  CommonDefine.h  PacketQueue.cpp  PacketQueue.h  VideoHelper.c  VideoHelper.h  VideoProcess.cpp  VideoProcess.hpp
videoplayer/src/main/cpp/live555/: VideoClient.cpp  VideoClient.h
videoplayer/src/main/cpp/live555/BasicUsageEnvironment/: BasicHashTable.cpp  BasicTaskScheduler.cpp  BasicUsageEnvironment.cpp  BasicUsageEnvironment0.cpp  UsageEnvironment.cpp  strDup.cpp
videoplayer/src/main/cpp/live555/groupsock/: Groupsock.cpp  Groupsock.hh  GroupsockHelper.cpp  GroupsockHelper.hh  NetAddress.cpp  NetAddress.hh  NetCommon.h  NetInterface.hh  TunnelEncaps.hh  inet.c
videoplayer/src/main/cpp/live555/liveMedia/: FramedSource.hh  H264VideoRTPSource.cpp  H264VideoRTPSource.hh  Media.hh  MediaSession.cpp  MediaSession.hh  MediaSink.cpp  MediaSink.hh  MultiFramedRTPSource.cpp  MultiFramedRTPSource.hh  RTCP.cpp  RTPInterface.cpp  RTPInterface.hh  RTPSink.cpp  RTSPClient.cpp  RTSPClient.hh  liveMedia.hh  rtcp_from_spec.c
videoplayer/src/main/cpp/retrive/: ffmpeg_mediametadataretriever.c
videoplayer/src/main/java/com/videoplayer/: DDLog.java  GLHardRender.java  GLSoftRender.java  NativeCode.java  VideoClient.java  VideoPlayer.java
videoplayer/src/main/java/wseemann/media/: FFmpegMediaMetadataRetriever.java
videostab/: CMakeLists.txt  build.gradle
videostab/src/androidTest/java/com/flypie/videostab/: ExampleInstrumentedTest.java
videostab/src/main/: AndroidManifest.xml
videostab/src/main/cpp/: VideoStab.h  VideoStabBridge.cpp  Videostab.cpp
videostab/src/main/cpp/opencv2/: cvconfig.h  opencv_modules.hpp
videostab/src/main/java/com/flypie/videostab/: Videostab.java
videostab/src/main/res/values/: strings.xml
videostab/src/test/java/com/flypie/videostab/: ExampleUnitTest.java
(+603 files in other folders)
